I updated my css as I ran AxeDevTools, it showed color contrast issues. My subject and date text were difficult to read because it was light colored. I changed it to darker color and that fixed the color contrast issues.

--- a/red-river-mart/src/components/pages/forumPageComponent/forumPage.css
+++ b/red-river-mart/src/components/pages/forumPageComponent/forumPage.css
@@ -80,6 +80,7 @@
 
 .forumPost {
     background-color: #f8f9fa;
+    color: black;
     border-radius: 12px;
     border: 1px solid #cac9c9;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
@@ -103,7 +104,7 @@
 .forumPost p.subject {
     margin: 0;
     font-size: 1rem;
-    color: grey;
+    color: darkslategrey;
     text-align: left;
 }
 
@@ -117,7 +118,7 @@
 
 .forumPost p.date {
     font-size: 0.75rem;
-    color: grey;
+    color: darkslategrey;
     text-align: right;
     margin-top: auto;
 }
